Add description list

--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MTM6201-week 1</title>
+    <title>Lucia Garavito</title>
 </head>
 <body>
-    <h1> Bienvenido Welcome Bienvenue WEB DEV II</h1>
-
+    <header>
+        <h1> Laura Lucia Garavito Molano</h1>
     
+    </header>
+    <dl>
+        <dt>Student Number</dt>
+        <dd>041046021</dd>
+        <dt>Program name</dt>
+        <dd>Interactive Media Design</dd>
+        <dt>Course Code</dt>
+        <dd>MTM6201_030 Web Development II</dd>
+        <dt>Interesting Fact</dt>
+        <dd>I am learning how to tattoo</dd>
+    </dl>
 </body>
 </html>
