--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
     <title>Lucia Garavito</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
         <dt>Course Code</dt>
         <dd>MTM6201_030 Web Development II</dd>
         <dt>Interesting Fact</dt>
-        <dd>I am learning how to tattoo</dd>
+        <dd>I am learning how to tattoo.</dd>
     </dl>
 </body>
 </html>
