--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
     <title>Lucia Garavito</title>
 </head>
 <body>
-    <header>
-        <h1> Laura Lucia Garavito Molano</h1>
-    
-    </header>
-    <dl>
-        <dt>Student Number</dt>
-        <dd>041046021</dd>
-        <dt>Program name</dt>
-        <dd>Interactive Media Design</dd>
-        <dt>Course Code</dt>
-        <dd>MTM6201_030 Web Development II</dd>
-        <dt>Interesting Fact</dt>
-        <dd>I am learning how to tattoo.</dd>
-    </dl>
+    <div class="container">
+        <header>
+            <h1> Laura Lucia Garavito Molano</h1>
+        </header>
+        <dl>
+            <dt>Student Number</dt>
+            <dd>041046021</dd>
+            <dt>Program name</dt>
+            <dd>Interactive Media Design</dd>
+            <dt>Course Code</dt>
+            <dd>MTM6201_030 Web Development II</dd>
+            <dt>Interesting Fact</dt>
+            <dd>I am learning how to tattoo.</dd>
+        </dl>
+    </div>
+
 </body>
 </html>
