adds img to header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <header>
             <h1> Laura Lucia Garavito Molano</h1>
+            <img src="images/Portrait1.jpg" alt="portrait">
         </header>
         <dl>
             <dt>Student Number</dt>
